<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/navlayout"
    android:background="@drawable/left_side_nav_bar_dark"
    tools:context=".Fragments.LeftNav">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center|top"
            android:id="@+id/homelayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.14"
            app:layout_constraintHorizontal_bias="0.4">


        <ImageView
            android:id="@+id/homebtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/home_inactive"/>

        <TextView
            android:id="@+id/hometxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/race_sport_medium"
            android:text="@string/home"
            android:gravity="center"
            android:textColor="@color/textuniv"
            android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center|top"
            android:id="@+id/bluetoothlayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45"
            app:layout_constraintHorizontal_bias="0.5">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/ble"
            android:src="@drawable/bluetooth"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bletxt"
            android:textSize="14sp"
            android:fontFamily="@font/race_sport_medium"
            android:textColor="@color/textuniv"
            android:text="@string/bluetooth"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center|top"
            android:id="@+id/musiclayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8"
            app:layout_constraintHorizontal_bias="0.4">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/musicbtn"
                android:src="@drawable/music"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/musictxt"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/race_sport_medium"
                android:textColor="@color/textuniv"
                android:text="@string/music"/>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>