<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:id="@+id/rightlayout"
    android:background="@drawable/right_side_nav_dark"
    tools:context=".Fragments.RightNav">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center|top"
                android:id="@+id/navlayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.14"
                app:layout_constraintHorizontal_bias="0.4">


                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/navigationimg"
                    android:src="@drawable/navigation"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/navigationtxt"
                    android:textSize="14sp"
                    android:textColor="@color/textuniv"
                    android:fontFamily="@font/race_sport_medium"
                    android:text="@string/navigation"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center|top"
                android:id="@+id/alertlayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.45"
                app:layout_constraintHorizontal_bias="0.5">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/alertimg"
                    android:src="@drawable/alert_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/alertstxt"
                    android:textSize="14sp"
                    android:textColor="@color/textuniv"
                    android:fontFamily="@font/race_sport_medium"
                    android:text="@string/alerts"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center|top"
                android:id="@+id/triplayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8"
                app:layout_constraintHorizontal_bias="0.4">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/tripimg"
                    android:src="@drawable/trip"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/tripstxt"
                    android:textSize="14sp"
                    android:textColor="@color/textuniv"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/race_sport_medium"
                    android:text="@string/trips"/>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>