<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:cardCornerRadius="8dp"
    android:elevation="8dp"
    android:padding="5dp"
    android:layout_margin="10dp"
    android:id="@+id/settings_frag"
    tools:context=".Components.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/t1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settingstxt"
                    android:textColor="@color/textuniv"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.029"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.288" />

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_close"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.983"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="15dp"
            android:layout_weight="1">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/displaylean"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp"
                android:layout_weight="1"
                app:strokeColor="@color/transparent_color"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settingsdisplaytxt"
                    android:textColor="@color/textuniv"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorPrimarygray"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/blelean"
                android:backgroundTint="@color/transparent_color"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp"
                app:strokeColor="@color/transparent_color"
                app:strokeWidth="0dp"
                android:layout_weight="1"
                android:clickable="true"
                app:checkedIcon="@null"
                app:cardForegroundColor="@color/card_selector"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settingsbletxt"
                    android:textColor="@color/textuniv"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>

            </com.google.android.material.card.MaterialCardView>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorPrimarygray"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/documentslean"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/transparent_color"
                app:strokeColor="@color/transparent_color"
                app:strokeWidth="0dp"
                android:clickable="true"
                app:checkedIcon="@null"
                app:cardForegroundColor="@color/card_selector"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settingsdoctxt"
                    android:textColor="@color/textuniv"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>


            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorPrimarygray"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/aboutlean"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/transparent_color"
                app:strokeColor="@color/transparent_color"
                app:strokeWidth="0dp"
                android:clickable="true"
                app:checkedIcon="@null"
                app:cardForegroundColor="@color/card_selector"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/settingsabouttxt"
                    android:textColor="@color/textuniv"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>


            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorPrimarygray"/>

        </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimarygray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/displaylayout"
                        layout="@layout/settings_display_layout" />

                    <include
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/blelayout"
                        layout="@layout/settings_bluetooth_layout" />

                    <include
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/documentlayout"
                        layout="@layout/settings_documents_layout" />

                    <include
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/aboutlayout"
                        layout="@layout/settings_about_layout" />

                </LinearLayout>

            </ScrollView>
        </LinearLayout>

     </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>